--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "demo",
   "version": "1.0.0",
   "description": "使用Flask+Socketio+Vue，制作一个即时在线聊天室💻",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "keywords": [],
   "author": "",
