--- a/chat-frontend/package.json
+++ b/chat-frontend/package.json
@@ -12,10 +12,11 @@
     "axios": "^1.9.0",
     "socket.io-client": "^4.8.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.15.12",
+    "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
